@@ -62,6 +62,7 @@ Broker:
   subscriptions of /#
 - Fix handling of SSL errors on SSL_accept().
 - Fix handling of QoS 2 messages on client reconnect.
+- Drop privileges now sets supplementary groups correctly.
 
 Client library:
 - Add support for TLSv1.2 and TLSv1.1, except for on the Python module.
